# realtime-hikvision-preview-python

./: .gitignore  CMakeLists.txt  HKIPcamera.cpp  README.md
EN-HCNetSDKV6.1.6.45_build20210302_linux64/LinuxJavaDemo/: readme.txt
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/: qt_demo_readme.txt
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/includeCn/: HCNetSDK.h
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/: qtclientdemo.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/MainWindow/DeviceTree/: devicedata.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/MainWindow/DeviceTree/AddNode/: addnode.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/OtherFunc/AudioTransfer/: audiotransfer.cpp  audiotransfer.h
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/OtherFunc/Deployment/: deploy.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/ParaConfig/configure_params/: cconfigureparams.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/PlayBack/: playback.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/QtDemo/src/RealPlay/: realplay.cpp
EN-HCNetSDKV6.1.6.45_build20210302_linux64/doc/: readme.txt
EN-HCNetSDKV6.1.6.45_build20210302_linux64/incEn/: HCNetSDK.h  plaympeg4.h
EN-HCNetSDKV6.1.6.45_build20210302_linux64/psdatacall_demo/: readme.txt
example/: .bashrc  hikvsdk.conf
npp_cuda/: CMakeLists.txt
